--- a/src/index.module.css
+++ b/src/index.module.css
@@ -1,9 +1,44 @@
 *{
     box-sizing: border-box;
     color: hsl(0, 0%, 100%);
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Iceland", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+body{
+    background-color: hsl(0, 0%, 7%);
 }
 
+.start{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 100px;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.startBtn {
+    width: 50px;
+    height: 50px;
+    background-color: hsl(0, 0%, 20%);
+    color: white;
+    font-size: 1.2rem;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.startBtn:hover {
+    background-color: hsl(0, 0%, 25%);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+}
 
 .container{
     position: absolute;
@@ -11,7 +46,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     height: 500px;
-    width: 400px;
+    width: 700px;
     background-color: hsl(0, 0%, 12%);
     border-radius: 20px;
     padding: 20px;
@@ -25,17 +60,25 @@
     font-size: 20px;
 }
 
-.header i{
-    color: hsl(0, 0%, 100%);
-}
 
 .logo_name{
-    margin-left: 100px;
+    font-size: 2rem;
+    margin: auto;
+    font-weight: bold;
+}
+
+.msgContainer{
+    display: flex;
+    justify-content: start;
+    align-items: end;
+    gap: 5px;
+    margin: 10px 0px;
+    flex: 1 1 0%;
 }
 
 .msgs{
     margin: 20px 0px;
-    flex: 1;
+    flex: 1 1 0%;
     overflow-y: auto;
     scrollbar-color: grey transparent;
     scroll-margin-left: 2px;
@@ -43,20 +86,18 @@
 }
 
 .left{
-    background-color: hsl(0, 0%, 20%);
-    margin:10px 0px;
-    width: 50%;
-    padding: 10px;
-    border-radius: 0px 10px 10px 10px;
+    /* background-color: hsl(0, 0%, 20%); */
+    /* width: 50%; */
+    /* padding: 10px 10px; */
+    border-radius: 10px 10px 10px 0px;
 }
 
 .right{
     background-color: hsl(0, 0%, 20%);
     border-radius: 10px 0px 10px 10px;
-    width: 50%;
     padding: 10px;
+    margin: 20px 0px;
     margin-left: auto;
-    margin-top: 10px;
 }
 .form{
     text-align: center;   
@@ -72,6 +113,7 @@
     background-color: hsl(0, 0%, 20%);
     color: hsl(0, 0%, 100%);
     margin-right: 10px;
+    font-size: 20px;
 }
 
 .sendBtn{
@@ -80,4 +122,109 @@
     height: 40px;
     width: 40px;
     border-radius: 50%;
+}
+
+@media screen and (min-width: 481px) and (max-width: 705px) {
+    .start {
+        font-size: 1.7rem;
+        gap: 8px;
+    }
+    
+    .startBtn {
+        width: 45px;
+        height: 45px;
+        font-size: 1.1rem;
+    }
+
+    .container {
+        width: 90%;
+        height: 80vh;
+        max-height: 600px;
+        padding: 15px;
+    }
+
+    .logo_name {
+        font-size: 1.8rem;
+        margin: auto;
+    }
+
+    .header {
+        font-size: 18px;
+    }
+
+    .msgs {
+        margin: 15px 0px;
+    }
+
+    .left, .right {
+        width: 80%;
+        padding: 10px;
+    }
+
+    .input {
+        width: 75%;
+        height: 40px;
+        font-size: 16px;
+    }
+
+    .sendBtn {
+        height: 40px;
+        width: 40px;
+    }
+    
+}
+
+/* Mobile responsiveness for width 375px */
+@media screen and (max-width: 480px) {
+
+    .start {
+        font-size: 1.4rem;
+        gap: 6px;
+        flex-direction: column; /* Stack text above button on very small screens */
+        text-align: center;
+        padding: 10px;
+    }
+    
+    .startBtn {
+        width: 40px;
+        height: 40px;
+        font-size: 1rem;
+        margin-top: 8px;
+    }
+    
+    .container {
+        width: 95%;
+        height: 90vh;
+        max-height: 600px;
+        padding: 15px;
+    }
+
+    .logo_name {
+        font-size: 1.5rem;
+        margin: auto;
+    }
+
+    .header {
+        font-size: 16px;
+    }
+
+    .msgs {
+        margin: 15px 0px;
+    }
+
+    .left, .right {
+        width: 75%;
+        padding: 8px;
+    }
+
+    .input {
+        width: 70%;
+        height: 36px;
+        font-size: 18px;
+    }
+
+    .sendBtn {
+        height: 36px;
+        width: 36px;
+    }
 }
