--- a/src/index.module.css
+++ b/src/index.module.css
@@ -112,10 +112,10 @@ body{
 }
 
 .left{
-    /* background-color: hsl(0, 0%, 20%); */
-    /* width: 50%; */
-    /* padding: 10px 10px; */
+    /* padding-left: 10px; */
     border-radius: 10px 10px 10px 0px;
+    text-align: justify;
+    line-height: 1.5;
 }
 
 .right{
